Closed Bug 1608100 Opened 5 years ago Closed 5 years ago

Distinguish (in console log messages) between failure to start font download at all vs download that fails

Categories

(Core :: Layout: Text and Fonts, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

Just a trivial thing: while looking at the failure in bug 1607000, I noticed that the user-font code issues a "download failed" console message from a couple of different stages in the process: either when UserFontSet::StartLoad() immediately returns an error without creating a network channel, e.g. due to mixed-content blocking, or if the channel is created successfully but subsequently returns an error.

To aid diagnosis of @font-face issues, I'd like to distinguish between these two cases, so that it's easier to see (just from the web console) what kind of failure is occurring.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/23d86664257e Distinguish (in console log messages) between failure to start font download at all vs download that fails. r=heycam
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: