Bug 1608100 - Distinguish (in console log messages) between failure to start font download at all vs download that fails. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D59328

--HG--
extra : moz-landing-system : lando